chat_artifacts_v1/verification_receipts/reconstructed_verifiers/message_9650_call_1_write_file__hermes-verify-fts-writeup__51a0dfacea53.log
RECONSTRUCTED_VERIFIER_SHA256=51a0dfacea53727de7bdaf335adfee6bd2f8f106b756888935c6b23b1964fd5c
REPRESENTATIVE=D:/Projects/can_o_worms/chat_artifacts_v1/reconstructed_deleted_verifiers/write_file_payloads/message_9650_call_1_write_file__hermes-verify-fts-writeup.py
DUPLICATE_VERSIONS=1
EXIT_CODE=1
--- STDOUT ---
--- STDERR ---
<input>:8: SyntaxWarning: 'ellipsis' object is not subscriptable; perhaps you missed a comma?
  File "D:\Projects\can_o_worms\chat_artifacts_v1\reconstructed_deleted_verifiers\write_file_payloads\message_9650_call_1_write_file__hermes-verify-fts-writeup.py", line 8
    lock_path = root ...[truncated]
                ^^^^
SyntaxError: invalid syntax. Did you mean 'not'?
